# Tinkoff-wealth-mcp

./: .env.example  .gitignore  DEPLOYMENT.md  README.md  business_requirements.md  mcp_server_api_design.md  mcp_tool_schemas.md  pyproject.toml  technical_requirements.md
.github/workflows/: ci-deploy.yml
docs/: ARCHITECTURE.md
src/investor_mcp/: __init__.py  _bonds.py  _cache.py  _goals.py  _portfolio.py  _recommend.py  _research.py  _risk.py  adapters.py  models.py  responses.py  server.py  service.py  storage.py
src/investor_mcp/adapters/: __init__.py  mock.py  tinkoff.py
src/investor_mcp/service/: __init__.py  bonds.py  cache.py  core.py  goals.py  portfolio.py  recommend.py  research.py  risk.py
tests/: test_adapters.py  test_cache.py  test_service.py  test_storage.py
